--- a/pom.xml
+++ b/pom.xml
@@ -4,8 +4,8 @@
     <!-- 基本信息 -->
     <modelVersion>4.0.0</modelVersion>
     <packaging>pom</packaging>
-    <name>demo</name>
-    <description>Demo project for Spring Boot</description>
+    <name>pose-management</name>
+    <description>pose-management</description>
 
     <!-- 项目说明：这里作为聚合工程的父工程 -->
     <groupId>com.zlht.pose</groupId>
@@ -29,7 +29,7 @@
     </modules>
     <properties>
         <java.version>1.8</java.version>
-        <demo.version>0.0.1-SNAPSHOT</demo.version>
+        <pose-management.version>0.0.1-SNAPSHOT</pose-management.version>
         <!-- 将各个依赖项的版本号提取到此处 -->
         <mybatis-spring-boot-starter.version>1.3.2</mybatis-spring-boot-starter.version>
         <druid-spring-boot-starter.version>1.1.10</druid-spring-boot-starter.version>
@@ -53,23 +53,23 @@
             <dependency>
                 <groupId>com.zlht.pose</groupId>
                 <artifactId>pose-management-dao</artifactId>
-                <version>${demo.version}</version>
+                <version>${pose-management.version}</version>
             </dependency>
             <dependency>
                 <groupId>com.zlht.pose</groupId>
                 <artifactId>pose-management</artifactId>
-                <version>${demo.version}</version>
+                <version>${pose-management.version}</version>
             </dependency>
             <dependency>
                 <groupId>com.zlht.pose</groupId>
                 <artifactId>pose-management-dist</artifactId>
-                <version>${demo.version}</version>
+                <version>${pose-management.version}</version>
             </dependency>
 
             <dependency>
                 <groupId>com.zlht.pose</groupId>
                 <artifactId>pose-management-tools</artifactId>
-                <version>${demo.version}</version>
+                <version>${pose-management.version}</version>
             </dependency>
 
             <!-- 框架 -->
