--- a/pose-management-tools/pom.xml
+++ b/pose-management-tools/pom.xml
@@ -41,5 +41,10 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-aop</artifactId>
         </dependency>
+        <!--Argon2 加密-->
+        <dependency>
+            <groupId>de.mkammerer</groupId>
+            <artifactId>argon2-jvm</artifactId>
+        </dependency>
     </dependencies>
 </project>
