feature : update log4j2.properties  #2

--- a/pose-management-api/src/main/resources/log4j2.properties
+++ b/pose-management-api/src/main/resources/log4j2.properties
@@ -1,12 +1,14 @@
-# ??????
-status = error
+status = info
 
-# ????????
 property.basePath = logs/
-property.fileName = my-app
+property.fileName = pose-management
 property.fileExtension = .log
 
-# ???????????????????????RollingFileAppender
+appender.console.type = Console
+appender.console.name = Console
+appender.console.layout.type = PatternLayout
+appender.console.layout.pattern = %d{yyyy-MM-dd HH:mm:ss.SSS} [%t] %-5level %logger{36} - %msg%n
+
 appender.rolling.type = RollingFile
 appender.rolling.name = RollingFile
 appender.rolling.fileName = ${basePath}${fileName}${fileExtension}
@@ -19,8 +21,13 @@ appender.rolling.policies.time.interval = 1
 appender.rolling.policies.size.type = SizeBasedTriggeringPolicy
 appender.rolling.policies.size.size = 10MB
 
-# ??Logger
 logger.myapp.name = com.example.api
-logger.myapp.level = debug
-logger.myapp.appenderRefs = rolling
+logger.myapp.level = info
+logger.myapp.appenderRefs = rolling, console
 logger.myapp.appenderRef.rolling.ref = RollingFile
+logger.myapp.appenderRef.console.ref = Console
+
+rootLogger.level = info
+rootLogger.appenderRefs = rolling, console
+rootLogger.appenderRef.rolling.ref = RollingFile
+rootLogger.appenderRef.console.ref = Console
