feature : update application.yml  #2

--- a/pose-management-api/src/main/resources/application.yml
+++ b/pose-management-api/src/main/resources/application.yml
@@ -5,7 +5,7 @@ spring:
 #  Mysql
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
-    url: jdbc:mysql://127.0.0.1:3306/demo?useUnicode=true&characterEncoding=UTF-8
+    url: jdbc:mysql://127.0.0.1:3306/pose-management?useUnicode=true&characterEncoding=UTF-8
     username: root
     password: root
   #    MVC搜索路径
