--- a/pose-management-api/pom.xml
+++ b/pose-management-api/pom.xml
@@ -76,6 +76,10 @@
             <artifactId>spring-boot-starter-log4j2</artifactId>
         </dependency>
 
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-lang3</artifactId>
+        </dependency>
 
 
     </dependencies>
