--- a/pose-management-tools/pom.xml
+++ b/pose-management-tools/pom.xml
@@ -46,5 +46,15 @@
             <groupId>de.mkammerer</groupId>
             <artifactId>argon2-jvm</artifactId>
         </dependency>
+      <!--log4J2-->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-log4j2</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-lang3</artifactId>
+        </dependency>
     </dependencies>
 </project>
