--- a/pom.xml
+++ b/pom.xml
@@ -49,6 +49,7 @@
         <junit.version>4.1.2</junit.version>
         <jackson.version>2.12.5</jackson.version>
         <commons-lang3.version>3.12.0</commons-lang3.version>
+        <hutool-all.version>5.7.20</hutool-all.version>
 
     </properties>
 
@@ -210,6 +211,13 @@
                 <artifactId>commons-lang3</artifactId>
                 <version>${commons-lang3.version}</version>
             </dependency>
+
+            <dependency>
+                <groupId>cn.hutool</groupId>
+                <artifactId>hutool-all</artifactId>
+                <version>${hutool-all.version}</version>
+            </dependency>
+
         </dependencies>
 
 
