--- a/algorithm-management-api/pom.xml
+++ b/algorithm-management-api/pom.xml
@@ -84,7 +84,11 @@
             <groupId>cn.hutool</groupId>
             <artifactId>hutool-all</artifactId>
         </dependency>
-
+        <!--poi-->
+        <dependency>
+            <groupId>org.apache.poi</groupId>
+            <artifactId>poi-ooxml</artifactId>
+        </dependency>
     </dependencies>
 
     <!--构建-->
