update:  return user login  data format #50

--- a/algorithm-management-api/src/main/resources/log4j2.properties
+++ b/algorithm-management-api/src/main/resources/log4j2.properties
@@ -21,7 +21,7 @@ appender.rolling.policies.time.interval = 1
 appender.rolling.policies.size.type = SizeBasedTriggeringPolicy
 appender.rolling.policies.size.size = 10MB
 
-logger.myapp.name = com.example.api
+logger.myapp.name = pbr-server
 logger.myapp.level = info
 logger.myapp.appenderRefs = rolling, console
 logger.myapp.appenderRef.rolling.ref = RollingFile
