--- a/algorithm-management-api/src/main/resources/log4j2.properties
+++ b/algorithm-management-api/src/main/resources/log4j2.properties
@@ -1,33 +1,38 @@
-status = info
-
-property.basePath=logs/
-property.fileName=algorithm-management
-property.fileExtension=.log
-
-appender.console.type = Console
-appender.console.name = Console
-appender.console.layout.type = PatternLayout
-appender.console.layout.pattern = %d{yyyy-MM-dd HH:mm:ss.SSS} [%t] %-5level %logger{36} - %msg%n
-
-appender.rolling.type = RollingFile
-appender.rolling.name = RollingFile
-appender.rolling.fileName = ${basePath}${fileName}${fileExtension}
-appender.rolling.filePattern = ${basePath}${fileName}-%d{yyyy-MM-dd}-%i${fileExtension}
-appender.rolling.layout.type = PatternLayout
-appender.rolling.layout.pattern = %d{yyyy-MM-dd HH:mm:ss.SSS} [%t] %-5level %logger{36} - %msg%n
-appender.rolling.policies.type = Policies
-appender.rolling.policies.time.type = TimeBasedTriggeringPolicy
-appender.rolling.policies.time.interval = 1
-appender.rolling.policies.size.type = SizeBasedTriggeringPolicy
-appender.rolling.policies.size.size = 10MB
-
-logger.myapp.name = pbr-server
-logger.myapp.level = info
-logger.myapp.appenderRefs = rolling, console
-logger.myapp.appenderRef.rolling.ref = RollingFile
-logger.myapp.appenderRef.console.ref = Console
-
-rootLogger.level = info
-rootLogger.appenderRefs = rolling, console
-rootLogger.appenderRef.rolling.ref = RollingFile
-rootLogger.appenderRef.console.ref = Console
+# ??????
+status=info
+# ???????????????
+property.basePath=logs/                 # ???????????
+property.fileName=algorithm-management  # ?????????
+property.fileExtension=.log             # ????????
+# ???????
+appender.console.type=Console                  # ??????????? Console
+appender.console.name=Console                  # ????? appender ???
+appender.console.layout.type=PatternLayout     # ????????????? PatternLayout
+appender.console.layout.pattern=%d{yyyy-MM-dd HH:mm:ss.SSS} [%t] %-5level %logger{36} - %msg%n
+# ????????????????????????????????????
+# ????????????????
+appender.rolling.type=RollingFile                 # ???????????? RollingFile
+appender.rolling.name=RollingFile                 # ?????? appender ???
+appender.rolling.fileName=${basePath}${fileName}${fileExtension}  # ??????????????????? basePath?fileName ? fileExtension?
+appender.rolling.filePattern=${basePath}${fileName}-%d{yyyy-MM-dd}-%i${fileExtension} 
+# ??????????????????????????????algorithm-management-2025-02-11-1.log
+appender.rolling.layout.type=PatternLayout        # ?????????????? PatternLayout
+appender.rolling.layout.pattern=%d{yyyy-MM-dd HH:mm:ss.SSS} [%t] %-5level %logger{36} - %msg%n
+# ?????????????????????????????????????????
+# ???????????
+appender.rolling.policies.type=Policies           # ?????????
+appender.rolling.policies.time.type=TimeBasedTriggeringPolicy    # ???????????
+appender.rolling.policies.time.interval=1         # ? 1 ???????
+appender.rolling.policies.size.type=SizeBasedTriggeringPolicy    # ???????????
+appender.rolling.policies.size.size=10MB          # ??????? 10MB ?????
+# ??????? (logger) "myapp"
+logger.myapp.name=pbr-server                     # ?? logger ??? pbr-server
+logger.myapp.level=info                          # ????????????? info
+logger.myapp.appenderRefs=rolling, console       # ????? appender?????????
+logger.myapp.appenderRef.rolling.ref=RollingFile # ????????? appender
+logger.myapp.appenderRef.console.ref=Console     # ???????? appender
+# ???????? (rootLogger)
+rootLogger.level=info                            # ?????????????? info
+rootLogger.appenderRefs=rolling, console         # ??????????????????
+rootLogger.appenderRef.rolling.ref=RollingFile   # ????????? appender
+rootLogger.appenderRef.console.ref=Console       # ???????? appender
